<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <Spinner
                android:id="@+id/productSpinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top|left"
                android:adjustViewBounds="true" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <EditText
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:layout_gravity="top|left"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:hint="Type amount here..."
                />
            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/amount"
                android:text="@string/add_button"
                android:layout_gravity="top|right"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/removeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/amount"
                android:text="@string/remove_button"
                android:layout_gravity="top|right"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                />
        </FrameLayout>

        <TextView
            android:id="@+id/productNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/viewCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/view_cart" />

    </LinearLayout>
</ScrollView>